fixing the z-index of the img affecting the icons clicking-SOLVED

--- a/css/style.css
+++ b/css/style.css
@@ -243,23 +243,7 @@ button {
   position: relative;
   
 }
-/* .right-area .bag::after {
-  content: "";
-  width: 20px;
-  height: 20px;
-  background: var(--danger);
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 50%;
-  position: absolute;
-  transition: 0.5s;
-  left: 13px;
-  top: -3px;
-} */
-/* .right-area .bag:hover::after {
-  top: -6px;
-} */
+
 
 /* area-3 */
 .area-3 {
